# rust_labs

./: .gitignore  Cargo.toml  Readme.md
conc_adder/: Cargo.toml
conc_adder/src/: main.rs
cprs/: Cargo.toml  Readme.md
cprs/src/: main.rs
crates/cprs/: Readme.md
crates/cprs/src/: main.rs
crates/guessing_game/src/: main.rs
crates/sudoku_solver/: Cargo.toml
crates/sudoku_solver/src/: main.rs  sudoku.rs
crates/sysinfo_cli/src/: main.rs
crates/temp/: Cargo.toml
crates/temp/src/: actor.rs  hashing.rs  itertools.rs  main.rs
crates/threadpool/src/: main.rs  pool.rs
crates/tiny_shell/: Cargo.toml
crates/tiny_shell/src/: shell.rs
crates/unbricked/: Cargo.toml
crates/unbricked/src/: main.rs
crates/win_tree/src/: tree.rs
filemove_r/: Cargo.toml  Readme.md
filemove_r/src/: main.rs
guessing_game/src/: main.rs
hello_world/: hello.rs
src/: borrow_slice_reference_1.rs  fib.rs  guessing_game.rs  main.rs
sudoku_solver/: test_sudoku.txt  test_sudoku_1.txt  test_sudoku_2.txt
sudoku_solver/src/: lib.rs  main.rs  sudoku.rs
sudoku_solver/src/test_data/: medium.txt  not_solved_yet.txt  sudoku_set.csv
sudoku_solver/tests/data/local/: test_sudoku_3.txt  test_sudoku_4.txt  test_sudoku_5.txt  test_sudoku_6.txt  (+1 more)
sysinfo_cli/: Cargo.toml
temp/: Cargo.toml
temp/src/: main.rs  simple_future.rs  tcp_concurrency.rs  tokio_single_thread.rs
threadpool/src/: lib.rs
tiny_shell/src/: main.rs  shell.rs
unbricked/: Cargo.toml
unbricked/src/: main.rs
win_tree/: Cargo.toml  README.md
win_tree/src/: cli.rs  lib.rs  main.rs  threadpool.rs  tree.rs
