[package]
name = "win_tree"
version = "0.1.2"
edition = "2021"

authors = ["Saurabh Goyal <saurabh.2561@gmail.com>"]
description = "Tree command to generate file system tree structure snapshot in JSON."
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/SaurabhGoyal/rust_labs/tree/main/win_tree"
homepage = "https://github.com/SaurabhGoyal/rust_labs/tree/main/win_tree"
documentation = "https://docs.rs/win_tree"

[dependencies]
futures = "0.3.30"
regex = "1.10.4"
serde = { version = "1.0.200" , features = ["derive"] }
serde_json = "1.0.116"
